--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,3 +1,11 @@
 body {
   background: #EEEEEE;
 }
+
+.nimbusCaption:before {
+  content: "Nimbus: ";
+}
+
+.nedCaption:before {
+  content: "Ned: "
+}
